--- a/.github/workflows/flw.yml
+++ b/.github/workflows/flw.yml
@@ -6,7 +6,7 @@ name: 返利网
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0 2,15-18 * * *'
+     - cron: '0 5-9,15-18 * * *'
   watch:
     types: started
 jobs:
